--- a/TuringMachine/TuringMachineApp.csproj
+++ b/TuringMachine/TuringMachineApp.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileManager.cs" />
+    <Compile Include="Machine\Tape.cs" />
     <Compile Include="Machine\Transition.cs" />
     <Compile Include="Machine\TransitionTable.cs" />
     <Compile Include="Machine\TuringMachine.cs" />
