IO comments adjusted Saving to out.txt fixed Prompt at the end of tape added

--- a/TuringMachine/TuringMachineApp.csproj
+++ b/TuringMachine/TuringMachineApp.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="FileManager.cs" />
     <Compile Include="IOStream\InputStream.cs" />
+    <Compile Include="IOStream\OutputData.cs" />
     <Compile Include="IOStream\OutputStream.cs" />
     <Compile Include="Machine\Tape.cs" />
     <Compile Include="Machine\Transition.cs" />
